--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "prisma": "prisma"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "prisma": "prisma"
     },
     "dependencies": {
-      "@prisma/client": "^5.0.0",
-      "bcryptjs": "^2.4.3",
-      "jsonwebtoken": "^9.0.0",
-      "next": "14.2.3",
-      "nodemailer": "^6.9.1",
-      "openai": "^4.0.0",
-      "react": "18.2.0",
-      "react-dom": "18.2.0"
+        "@prisma/client": "^5.0.0",
+        "bcryptjs": "^2.4.3",
+        "jsonwebtoken": "^9.0.0",
+        "next": "^14.2.28",
+        "nodemailer": "^6.9.1",
+        "openai": "^4.0.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
-      "autoprefixer": "^10.4.0",
-      "postcss": "^8.4.0",
-      "tailwindcss": "^3.0.0",
-      "prisma": "^5.0.0"
+        "autoprefixer": "^10.4.0",
+        "postcss": "^8.4.0",
+        "prisma": "^5.0.0",
+        "tailwindcss": "^3.0.0"
     }
-  }
+}
